--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,10 @@
     <string name="forward">fc</string>
     <string name="turn_left">lc</string>
     <string name="turn_right">rc</string>
+    <string name="send_arena">sa</string>
+
     <string name="bluetooth">Bluetooth</string>
-    <string name="manual">Manual</string>
-    <string name="log">Status Log</string>
+    <string name="updateMode">Manual</string>
+    <string name="log">Log</string>
     <string name="reconfig">String Commands</string>
 </resources>
