work done: -write the status to screen -add 180 button -toggle stop explore and start explore -edited the accerometer thingie, made it toggle from motion mode and controller mode, --saved the original values of x,y,z then calculate the difference, if above threshold(6) then will perform the action. -u can now use the AMD to test everything --u will need to replace the defaultJson.cs file(PREASE MAKE A BACKUP 1st XD) --file is uploaded onto drive under "AMD file" folder

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,8 @@
     <string name="reconfig">String Commands</string>
     <string name="refresh">Refresh</string>
     <string name="startExplore">Start Explore</string>
-    <string name="startShortestPath">SSP</string>
+    <string name="stopExplore">Stop Explore</string>
+    <string name="motion">Motion Mode</string>
+    <string name="controller">Controller Mode</string>
+    <string name="startShortestPath">Start Shortest Path</string>
 </resources>
