--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,14 @@
     <string name="start_explore">STAE</string>
     <string name="stop_explore">STOE</string>
     <string name="start_shortest">SSP</string>
+    <!--<string name="forward">0xE2</string>
+    <string name="turn_left">0xE4</string>
+    <string name="turn_right">0xE5</string>
+    <string name="back">RB</string>
+    <string name="request_arena">RA</string>
+    <string name="start_explore">STAE</string>
+    <string name="stop_explore">STOE</string>
+    <string name="start_shortest">SSP</string>-->
 
     <string name="bluetooth">Bluetooth</string>
     <string name="updateMode">Manual</string>
@@ -20,4 +28,5 @@
     <string name="motion">Motion Mode</string>
     <string name="controller">Controller Mode</string>
     <string name="startShortestPath">Start Shortest Path</string>
+    <string name="sendTextDialog">Send Text</string>
 </resources>
