MEOW commands added: -180 turn -start explore -stop explore -start shortest path -request arena
format for request arena input from RPI is done
-status isnt displayed yet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,6 @@
     <string name="stopExplore">STOE</string>
     <string name="motion">Motion Mode</string>
     <string name="controller">Controller Mode</string>
-    <string name="startShortestPath">Start Shortest Path</string>
+    <string name="startShortestPath">SSP</string>
     <string name="sendTextDialog">Send Text</string>
 </resources>
